<resources>
    <string name="app_name">NoteMe</string>
    <string name="note_logo">Note logo</string>
    <string name="search_hint">Search notes</string>
    <string name="title_hint">Add title</string>
    <string name="subtitle_hint">Add subtitle</string>
    <string name="note_hint">Add note</string>
    <string name="add_new_note">Add new note</string>
    <string name="new_note">New Note</string>
    <string name="saved">Saved</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="update_note_fab">Update Note</string>
    <string name="export_to_json">Export to JSON</string>
</resources>