<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:backgroundTint="@color/gray_background"
    tools:context=".activities.UpdateNoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar_update"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="@color/primary_rose"
            android:elevation="4dp"
            android:foregroundTint="@color/white"
            app:theme="@style/ThemeOverlay.AppCompat.Dark">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elegantTextHeight="false"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/edit_note_title"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/note_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:padding="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/title_hint"
        android:backgroundTint="@color/gray_tint"
        android:paddingLeft="10dp"
        android:textColor="@color/hint_text"
        android:theme="@style/ThemeOverlay.NoteText"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/note_subtitle_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="left|center_vertical"
        android:backgroundTint="@color/gray_tint"
        android:hint="@string/subtitle_hint"
        android:paddingLeft="10dp"
        android:textColor="@color/hint_text"
        android:theme="@style/ThemeOverlay.NoteText"
        app:layout_constraintTop_toBottomOf="@+id/note_title_edit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/note_body_edit"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/note_hint"
        android:backgroundTint="@color/gray_background"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/hint_text"
        android:theme="@style/ThemeOverlay.NoteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_subtitle_edit"
        app:layout_constraintVertical_bias="0.36" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/update_note_fab"
        android:focusable="true"
        app:backgroundTint="@color/teal_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_note_add_white_48"
        app:tint="@color/white"
        android:onClick="updateNote"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>