<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_note_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:backgroundTint="@color/gray_background"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="@color/primary_rose">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </androidx.appcompat.widget.Toolbar>

        <SearchView
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_background"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"
            android:searchIcon="@drawable/baseline_search_white_48"
            android:theme="@style/ThemeOverlay.SearchView" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_note"
        android:focusable="true"
        app:backgroundTint="@color/teal_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pencil"
        app:tint="@color/white"

        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="0dp"
        android:paddingEnd="2dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="exportToJson"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/export_to_json"


        android:focusable="true"
        app:backgroundTint="@color/teal_accent"
        app:layout_constraintBottom_toTopOf="@+id/new_note_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/actionModeShareDrawable"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>